--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+apply plugin:'application'
+mainClassName = "com.toportyu.main.Main"
+
+// command line run tests: gradle test
+// command line run application: gradle run
