--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/documentstore
-#spring.datasource.username=csabi
-#spring.datasource.password=csabi
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/documentstore
+spring.datasource.username=csabi
+spring.datasource.password=csabi
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
+
+#server.port = 81
